--- a/Code/View/viewcontroller.swift.liquid
+++ b/Code/View/viewcontroller.swift.liquid
@@ -12,7 +12,7 @@ class {{ prefix }}{{ module_info.name }}ViewController: UIViewController {
 
     var output: {{ prefix }}{{ module_info.name }}ViewOutput!
 
-    // MARK: Life cycle
+    // MARK: - Life cycle
     override func viewDidLoad() {
         super.viewDidLoad()
         output.viewIsReady()
