added @testable import with module name

--- a/Tests/Configurator/configurator_tests.swift.liquid
+++ b/Tests/Configurator/configurator_tests.swift.liquid
@@ -7,6 +7,7 @@
 //
 
 import XCTest
+@testable import {{ module_info.project_name }}
 
 class {{ prefix }}{{ module_info.name }}ModuleConfiguratorTests: XCTestCase {
 
